web: Fix header alignment.

--- a/web/src/common/styles/authentik.css
+++ b/web/src/common/styles/authentik.css
@@ -201,6 +201,32 @@ html > form > input {
 
 /* #endregion */
 
+/* #region Page */
+
+.pf-c-page {
+    --pf-c-page__header--BackgroundColor: transparent;
+}
+
+/**
+ * We reverse the page header colors because PatternFly assumes a dark header
+ * on light themes. The opposite must be done for dark themes.
+ */
+.pf-c-page__header {
+    --pf-global--Color--100: var(--pf-global--Color--dark-100);
+    --pf-global--Color--200: var(--pf-global--Color--dark-200);
+    --pf-global--BorderColor--100: var(--pf-global--BorderColor--dark-100);
+    --pf-global--primary-color--100: var(--pf-global--primary-color--dark-100);
+    --pf-global--link--Color: var(--pf-global--link--Color--dark);
+    --pf-global--link--Color--hover: var(--pf-global--link--Color--dark);
+    --pf-global--BackgroundColor--100: transparent;
+}
+
+.pf-c-content {
+    /* --pf-c-content--Color: var(--pf-global--Color--100) !important; */
+}
+
+/* #endregion */
+
 /* #region Form controls */
 
 .pf-c-form-control {
@@ -298,14 +324,6 @@ ak-tabs[vertical] {
 }
 
 /* #endregion */
-
-/* #region Page layout */
-
-.pf-c-page__header {
-    z-index: 0;
-    background-color: var(--ak-dark-background-light);
-    box-shadow: var(--pf-global--BoxShadow--lg-bottom);
-}
 
 /* #region Login adjustments */
 
